[gd_scene load_steps=7 format=3 uid="uid://dybmk2gqucb4n"]

[ext_resource type="Script" uid="uid://doxh6jiab1rec" path="res://scenes/DoorBoss1.gd" id="1_pugdw"]
[ext_resource type="Texture2D" uid="uid://dcyhrufjspom" path="res://tiles/Dungeon/Dungeon1/Dungeon_Tiles.png" id="2_pugdw"]
[ext_resource type="AudioStream" uid="uid://l0a64v0wol80" path="res://audio/sfx/dragon-studio-door-opening-454242.mp3" id="3_pugdw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xb1il"]
atlas = ExtResource("2_pugdw")
region = Rect2(0, 112.41419, 32.08265, 47.68882)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ebfc"]
size = Vector2(68, 90)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ao1jx"]
size = Vector2(64, 72.5)

[node name="Door" type="Node2D"]
script = ExtResource("1_pugdw")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 1.868)
texture = SubResource("AtlasTexture_xb1il")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_1ebfc")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 7.25)
shape = SubResource("RectangleShape2D_ao1jx")

[node name="SFX_Open" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_pugdw")
volume_db = 1.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
